--- a/BringingItAllTogether/packages.config
+++ b/BringingItAllTogether/packages.config
@@ -1,14 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
-  <package id="AttributeRouting.Core" version="3.5.6" targetFramework="net45" />
-  <package id="AttributeRouting.Core.Http" version="3.5.6" targetFramework="net45" />
-  <package id="AttributeRouting.Core.Web" version="3.5.6" targetFramework="net45" />
-  <package id="AttributeRouting.WebApi" version="3.5.6" targetFramework="net45" />
+  <package id="AttributeRouting" version="3.5.6" targetFramework="net452" />
+  <package id="AttributeRouting.Core" version="3.5.6" targetFramework="net452" />
+  <package id="AttributeRouting.Core.Web" version="3.5.6" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="knockoutjs" version="3.3.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
@@ -35,7 +33,7 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
   <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net45" />
@@ -45,7 +43,7 @@
   <package id="NLog" version="4.2.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
-  <package id="WebActivator" version="1.0.0.0" targetFramework="net45" />
+  <package id="WebActivator" version="1.0.0.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
-  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
